:poop: feat: projects api a little improved